re PR rtl-optimization/21330 (ICE in compare_and_jump_seq, at loop-unswitch.c:120)

PR rtl-optimization/21330
	* loop-unswitch.c (may_unswitch_on): Set *cinsn only when
	returning non-NULL.
	(unswitch_single_loop): Clear cinsn when retrying.

	* gcc.c-torture/execute/20050502-1.c: New test.

From-SVN: r99310